--- a/frontend/src/components/DarkMode/css/dark.css
+++ b/frontend/src/components/DarkMode/css/dark.css
@@ -1,21 +1,16 @@
-.dark-mode {
+body.dark-mode {
   background-color: black;
+  color: white;
+  transition: background-color 1s ease-in-out;
+}
+
+body.dark-mode p{
   color: white;
 }
 
-.dark-mode-toggle {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  padding: 10px;
-  background-color: white;
-  color: black;
+#dark-btn {
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  border-radius: 50%;
-  transition: background-color 0.3s ease;
-}
-
-.dark-mode-toggle.active {
-  background-color: black;
-  color: white;
+  justify-content: center;
 }
