--- a/frontend/src/components/Form/css/register.css
+++ b/frontend/src/components/Form/css/register.css
@@ -1,16 +1,16 @@
-*{
-    font-size: 16px;
-    font-family: "Kanit", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+* {
+  font-size: 16px;
+  font-family: "Kanit", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .form-ctn {
-    color: #000;
-    width: 45%;
+  color: #000;
+  width: 45%;
   border-radius: 24px;
-  background:  #4DDAD1;
+  background: #108e73;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,14 +21,14 @@
   font-weight: 700;
 }
 
-.form-ctn input{
-    height: 40px;
-    width: 400px;
-    border-radius: 8px;
+.form-ctn input {
+  height: 40px;
+  width: 400px;
+  border-radius: 8px;
 }
 
-.form-ctn a{
-    color: #ff0032;
+.form-ctn a {
+  color: #ff0032;
 }
 
 .form-btn {
