--- a/frontend/src/components/Headers/css/header.css
+++ b/frontend/src/components/Headers/css/header.css
@@ -13,28 +13,20 @@ header {
   height: 40px;
   border-radius: 10px;
   background-color: white;
-  border: #108E73 3px solid;
-
+  border: #108e73 3px solid;
 }
 
 #searchbar {
   width: 600px;
-  border-top: #108E73 3px solid;
+  border-top: #108e73 3px solid;
   border-top-left-radius: 0%;
   border-bottom-left-radius: 0%;
-  border-bottom:  #108E73 3px solid;
-
+  border-bottom: #108e73 3px solid;
 }
 
 #searchbar:focus,
 #searchbar:hover {
   outline: none;
-}
-
-.dark-mode {
-  display: flex;
-  align-items: center;
-  margin: 1rem;
 }
 
 button:hover {
@@ -44,7 +36,7 @@ button:hover {
 
 .btn-action {
   color: white;
-  background: #ff0032 !important;
+  background:#FF0032 !important;
   border: none;
   border-radius: 20px;
   height: 40px;
@@ -54,7 +46,7 @@ button:hover {
 }
 
 #login {
-  background: #108E73 !important;
+  background: #108e73 !important;
 }
 
 #register {
@@ -75,6 +67,6 @@ button:hover {
 .account {
   width: 50px;
   height: 50px;
-  background-color: #ff0032;
+  background-color: #FF0032;
   border-radius: 50px;
 }
